--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,8 +1,13 @@
 .App {
-  text-align: center;
+    max-width: 900px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .Header {
-  color: #443e3e;
-  text-shadow: 1px 1px 5px #fff;
+    color: #443e3e;
+    text-shadow: 1px 1px 5px #fff;
+    text-align: center;
 }
 /* write your parent styles in here for your App.js */
